# notebook

./: .buildinfo  .gitignore  README.md  genindex.html  hello.py  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  settings.ini
.github/workflows/: deploy.yml
_sources/: intro.md
content/: _config.yml  _toc.yml  intro.md
content/dl_jax/preliminaries/: 1.ndarray.ipynb  index.md
dl_jax/preliminaries/: 1.ndarray.html  index.html
nbs/: index.ipynb  nbdev.yml
scientist_notebook/: _modidx.py
