[project]
name = "scientist-notebook"
version = "0.1.0"
description = "A scientist notebook."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ghp-import>=2.1.0",
    "jupyter>=1.1.1",
    "jupyter-book>=1.0.3",
    "jupyterlab>=4.3.4",
    "jupyterlab-quarto>=0.3.5",
    "matplotlib>=3.10.0",
    "nbdev>=2.3.34",
    "plotly>=6.0.0",
    "ruff>=0.9.3",
]
