[project]
name = "scientist-notebook"
version = "0.1.0"
description = "A scientist notebook."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ghp-import>=2.1.0",
    "jax-ai-stack[tfds]>=2025.1.9",
    "jax[cuda12]>=0.4.38",
    "jupyter>=1.1.1",
    "jupyter-book>=1.0.3",
    "jupyterlab>=4.3.4",
    "jupyterlab-quarto>=0.3.5",
    "matplotlib>=3.10.0",
    "plotly>=6.0.0",
    "ruff>=0.9.3",
    "tensorboardx>=2.6.2.2",
]
